Auth operations were done with Jwt.AutoMapper and Dtos added.

--- a/OgrencidenWebApi/appsettings.json
+++ b/OgrencidenWebApi/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "Token": "startkey95092ad2d2gf"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=OgrencidenBackEnd; User Id=sa;password=admin"
